aks/gitops/apps/sapp2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapp2-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sapp2.aks.darrencloudlab.com
      secretName: sapp2-tls
  rules:
    - host: sapp2.aks.darrencloudlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapp2-service
                port:
                  number: 80
